Fixed "list-page-chart" height and remove z-index and bump version 0.1.143

--- a/src/scss/backend/components/list_page.scss
+++ b/src/scss/backend/components/list_page.scss
@@ -315,11 +315,11 @@
 .list-page-chart {
   position: relative;
   overflow: auto;
-  height: calc(100% - 60px);
+  height: -webkit-calc(100% - 64px);
+  height: calc(100% - 64px);
   background-color: #fff;
   border-top: 1px solid #e9e9e9;
   padding: 10px 20px 20px;
-  z-index: 1;
 }
 
 .list-chart-summary {
